# open-source-ballistics

./: .gitignore  AUTHORS.md  README.md  pyproject.toml
ballistics/: __init__.py  guns.py  mediums.py  projectiles.py
ballistics/extras/: __init__.py  config.py  plotting.py  ranging.py
examples/: 1J-6mm0.20-trajectory.py
